# tekenbot

./: .breakpoints  .env  .replit  commands.py  commandsadmin.py  dockerfile  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  server.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
.upm/: store.json
CoC6thjobs/: 2010.txt  base.txt
diceroll/: __init__.py  roll_calc.py  roll_choice.py  roll_nbn.py  roll_nbn_target.py  roll_ndn.py  roll_parser.py  roll_target.py  zenkaku_hankaku.py
func/: Kaibunsyo.py  call.py  color_tile_game.py  colortile.py  echo_past_message.py  flash_word.py  fusion.py  hantei.py  help.py  helpadmin.py  hitandblow.py  jobs.py  kaibunsyo.py  past_self.py  save_messages.py  stats_6e.py  stats_7e.py
funcslash/: activity_report.py  wakeup.py  yubaba.py
post/: lexer.py  parser.out  parser.py  parsetab.py
