[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord = "^2.3.2"
discord-py = "^2.3.2"
flask = "3.0.3"
discord-py-slash-command = "4.2.1"
pytz = "2024.1"
keep = "^2.10.1"
numexpr = "^2.10.0"
ply = "3.11"
numpy = "^1.26.4"
dice = "^4.0.0"
pmagpy-cli = "^4.2.120"
call = "^0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"